--- a/manager_app/templates/invoices/index.html
+++ b/manager_app/templates/invoices/index.html
@@ -1,11 +1,34 @@
-{% extends "admin/base_site.html" %}
+{% extends "base/base.html" %}
 
+{% load static %}
 
-{% block title %}Panel de Control - Mi Sitio{% endblock %}
+{% block title %}Facturas{% endblock %}
 
 {% block content %}
-<div>
 
+<div class="main">
+    <div class="d-flex justify-content-between">
+        <div class="p-2">
+            <h2 class="m-0 fw-bold">Invoices</h2>
+            <p class="fw-light text-body-secondary">There are 7 total invoices</p>
+        </div>
+        <div class="d-flex flex-row align-self-center">
+            <select class="btn-select" aria-label="Default select example" id="filterCalendar">
+                <option value="0" selected>Filter by date</option>
+                <option value="1">Diario</option>
+                <option value="2">Semanal</option>
+                <option value="3">Mensual</option>
+                <option value="4">Rango personalizado</option>
+            </select>
+            <button hx-get="{% url "new_invoice" %}" class="button shadow">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
+                </svg>                
+                <span class="lable">new invoice</span>
+            </button>
+        </div>
+    </div>
     <div class="form-group">
         {% include "includes/filter_date.html" %}
         
@@ -13,18 +36,13 @@
             <i class="fa fa-download" aria-hidden="true"></i>
             exportar ventas
         </a>
-        <a href="{% url "invoice_new" %}" class="btn btn-outline-info form-control">
-            <i class="fa fa-plus" aria-hidden="true"></i>
-            Nueva
-        </a>
     </div>
 
     {% include "includes/card_dash.html" %}
-    
+
     {% include "invoices/list_bills.html" %}
-</div>
-    
+
     {% include "includes/modal.html" with template="invoices/bill.html" %}
-    
+</div>
     
 {% endblock %}
