--- a/manager_app/templates/base/base.html
+++ b/manager_app/templates/base/base.html
@@ -8,13 +8,26 @@
 
     <script src="https://unpkg.com/htmx.org@1.9.2"></script>
 
+    <link rel="stylesheet" href="{% static "css/base.css" %}">
+    <link rel="stylesheet" href="{% static "css/button.css" %}">
+    <link rel="stylesheet" href="{% static "css/cart.css" %}">
+
+    <script src="{% static 'js/htmx/htmx.min.js' %}" defer></script>
+    <!--Right under this-->
+    <script src="{% static 'js/htmx/debug.js' %}" defer></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <title>Document</title>
+    <title>
+        {% block title %}{% endblock title %}
+    </title>
 </head>
 <body>
-    {% block content %}{% endblock content %}    
 
+    <div class="main">
+    {% block content %}{% endblock content %}    
+    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
