--- a/manager_app/templates/invoices/cart/form.html
+++ b/manager_app/templates/invoices/cart/form.html
@@ -1,7 +1,7 @@
 <div id="cart-shopping">
     <form method='POST' hx-post="{% url "add_order" %}">
         {% csrf_token %}
-        <input type="text" value="{{bill.id}}" name="bill" style="display:none;">
+        {% comment %} <input type="text" value="{{bill.id}}" name="bill" style="display:none;"> {% endcomment %}
         <label>Detalle</label>
         <input type="text" value="{{item.title}}" >
         <input type="text" value="{{item.id}}" name="product" style="display:none;">
